# bootcamp

./: README.md  Readme.md  dailylog.md
dataflow-framework/: Makefile  Readme.md
dataflow-framework/abstraction-level-0/: Readme.md  input.txt  process.py
dataflow-framework/abstraction-level-1/: Readme.md  input.txt  output.txt  process.py
dataflow-framework/abstraction-level-2/: Readme.md  cli.py  core.py  main.py  output.txt  pipeline.py  types_module.py
dataflow-framework/abstraction-level-3/: Readme.md  cli.py  core.py  input.txt  main.py  output.txt  pipeline.py  pipeline.yaml  type_defs.py
dataflow-framework/abstraction-level-4/: Readme.md  main.py  processors.py  requirements.txt  test_processors.py
dataflow-framework/abstraction-level-5/: Readme.md  config.py  engine.py  main.py  processors.py
dataflow-framework/abstraction-level-6/: Readme.md  config.py  engine.py  main.py  requirements.txt
dataflow-framework/abstraction-level-7/: Readme.md  config.py  dashboard.py  engine.py  main.py  metrics.py  requirements.txt
dataflow-framework/abstraction-level-8/: Final.md  Readme.md  dashboard.py  main.py  processor.py  run.sh  utils.py
day0/: Licence  README.md  pyproject.toml  setup.py  yamini-hello.py
day0/ex-basics-1/: README.md  setup.cfg
day0/ex-basics-2/: setup.cfg
day0/tests/: test_main.py
day0/yamini_hello/: main.py
day1/diagrams/: login_sequence.md
day1/docs/: Readme.md  architecture.md  design_doc.md  index.md
day2/2.Pythonic_Idioms/: 2.1 eafp_dict_access.py  2.4 eafp_attribute_access.py  2.5 lbyl_file_race_condition.py  lbyl_dict_access.py  (+2 more)
day2/7. Performance and Debugging/7.5 Packaging with pyproject.toml/7_5_1_minimal_project_file.pyproject.toml/: pyproject.toml
day2/7. Performance and Debugging/7.5 Packaging with pyproject.toml/7_5_5_include_extra_files.pyproject.toml/: pyproject.toml
figure-captions-extraction/: Dockerfile  Implementation_and_Testing_Plan.docx  Makefile  Readme.dm  Readme.md  config.py  csv_exporter.py  designdocument.docx  docker-compose.yaml  export.csv  export.json  ids.txt  json_exporter.py  logger_config.py  outputfce.csv  outputfce.json  pmc_api_client.py  pmc_parser.py  requirements.txt  run.py
persistence-drills/: Readme.md
(+378 files in other folders)
