[metadata]
name = myname-hello
version = 0.0.2
author = Your Name
author_email = your.email@example.com
description = A simple hello module package with rich output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://test.pypi.org/project/myname-hello/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    rich
