[project]
name = "mytool"
version = "0.1.0"
description = "A minimal CLI tool"
authors = [{ name="Yamini Krishna", email="yaminimusku04@email.com" }]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Expected behavior:
# This file allows your project to be built using setuptools
