
[project]
name = "mytool"
version = "0.1.0"
description = "A minimal CLI tool"
authors = [{ name="Yamini Krishna", email="example@email.com" }]
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mytool = "mytool.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mytool" = ["data/*.txt"]

# Expected behavior:
# Files in mytool/data/*.txt are included in the package
